--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,10 @@
 spring:
   application:
     name: simple-rest-service
+
 logging:
   level:
     org.mersen: DEBUG
 
 server:
-  port: ${_PORT:7777}
+  port: 8080
